place popup above tawk.to

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,8 @@ $black: #2b2b2b;
 $white: #fff;
 
 .cc-window {
+  z-index: 3000000000; // above tawk.to
+
   .cc-compliance {
     margin-left: 1rem;
     display: flex;
